--- a/style.css
+++ b/style.css
@@ -2,19 +2,114 @@
 body {
   font-family:Arial, Helvetica, sans-serif;
   background-color: #24273a;
+  margin: 0;
 }
 /* Header stuff */
-.header {
+header {
   padding: 30px;
   text-align: center;
   background: #181825;
   color: #cdd6f4;
 }
-.header h1 {
+header h1 {
   font-size: 60px;
 }
-.header p {
+header p {
   padding-top: 0px;
 }
 /* Nav bar stuff */
-
+nav ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #11111b;
+}
+nav li {
+  float: left;
+}
+nav li a {
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  color: white;
+  background-color: #11111b;
+}
+nav li a:hover:not(.active) {
+  background-color: #89b4fa;
+}
+li a.active {
+  background-color: #b4befe;
+  color: black;
+}
+/* Div Styling */
+div {
+  color: white;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+div.post {
+  background-color: #1e1e2e;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+div h2 {
+  background-color: #1e1e2e;
+  padding: 15px;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+div p {
+  background-color: #313244;
+  padding: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+div ul {
+  background-color: #313244;
+  padding: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+div li {
+  background-color: #313244;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 15px;
+}
+/* Footer styling */
+footer {
+  background-color: #11111b;
+  bottom: 0px;
+}
+footer ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #11111b;
+}
+footer li {
+  border-right: 1px solid #bbb;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  color: white;
+  float: left;
+}
+/* Link colors are stupid */
+div a:visited {
+  color: #89b4fa;
+}
+div a:link {
+  color: #89dceb;
+}
+footer a:visited {
+  color: #89b4fa;
+}
+footer a:link {
+  color: #89dceb;
+}
