--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
   --surface0: #313244;
   --text: #cdd6f4;
   --mantle: #181825;
+  --surface2: #585b70;
+  --round: 15px;
 }
+/* You do not recognise the bodies in the water */
 body {
   font-family:Arial, Helvetica, sans-serif;
   background-color: #24273a;
@@ -71,48 +74,86 @@ li a.active {
   background-color: #b4befe;
   color: black;
 }
-/* Div Styling */
+/* Post Div Styling */
 div {
   color: var(--text);
   margin-left: 10px;
   margin-right: 10px;
+  border-radius: var(--round);
 }
 div.post {
-  background-color: var(--base);
+  background-color: var(--surface0);
   font-size: 20px;
   /* margin-bottom: 0px; */
+  padding-bottom: 10px;
 }
-div h2 {
+div.post h2 {
   background-color: var(--base);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   padding: 15px;
   font-size: 25px;
   margin-bottom: 0px;
 }
-div h3 {
+div.post h3 {
   background-color: var(--base);
   font-size: 20px;
   margin-bottom: 0px;
 }
-div p {
+div.post p {
   background-color: var(--surface0);
   padding: 15px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
-div ul {
+div.post ul {
   background-color: var(--surface0);
   padding: 15px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
-div ul i {
+div.post ul i {
   font-size: 50px;
 }
-div li {
+div.post li {
   background-color: var(--surface0);
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 15px;
+}
+/* Projects Div Styling */
+div.project {
+  background-color: var(--surface0);
+  font-size: 20px;
+  /* margin-bottom: 0px; */
+  padding-bottom: 10px;
+}
+div.project h2 {
+  background-color: var(--base);
+  padding: 15px;
+  font-size: 25px;
+  margin-bottom: 0px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+div.project p {
+  background-color: var(--surface0);
+  padding: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+div.project h3.code {
+  background-color: var(--base);
+}
+div.project pre {
+  background-color: var(--surface2);
+  /* padding: 5px; */
+  border-radius: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+div.project code {
+  padding: 0px;
 }
 /* Footer styling */
 footer {
