--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* My css file based on Catppuccin */
 body {
   font-family:Arial, Helvetica, sans-serif;
   background-color: #24273a;
 }
+/* Header stuff */
 .header {
   padding: 30px;
   text-align: center;
@@ -9,5 +11,10 @@ body {
   color: #cdd6f4;
 }
 .header h1 {
-  font-size: 40px;
+  font-size: 60px;
 }
+.header p {
+  padding-top: 0px;
+}
+/* Nav bar stuff */
+
